@@ -22,14 +22,9 @@ Source code is available
 <ul>
   <li>By HTTP from
 
-    <ul><li>
 	<a href="http://lilypond.org/download/">
 	  lilypond.org
 	</a>
-      <li>
-     <a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/download/">
-      sca.uwaterloo.ca</a>
-    </ul>
 
     <a href="http://savannah.gnu.org/">
       <img align="right" src="@IMAGES@floating.png"
